# cpp-project-template-macosx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  readme.md
cmake/: boost.cmake  ccache.cmake  clang-tidy.cmake  compiler-warnings.cmake  coverage.cmake  doxygen.cmake  include-what-you-use.cmake  includewhatyouuse.cmake  protobuf.cmake  rapidcheck.cmake  sfml.cmake  spdlog.cmake  tests.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/app/tests/: CMakeLists.txt  app.cpp  other.cpp  rapidapp.cpp
src/libs/proto/: CMakeLists.txt
src/module/: CMakeLists.txt  feature.cpp  feature.h
src/module/libs/proto/: protobuffs.pb.cc  protobuffs.pb.h
src/module/libs/rapidcheck/: CMakeLists.txt
src/module/mocks/: feature.cpp  feature.h
src/module/tests/: CMakeLists.txt  feature.cpp  rapid.cpp  rapidmain.cpp  simple.cpp
src/utils/: overloaded.hpp
tools/: compile-proto.sh
